<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    android:paddingStart="@dimen/_15sdp"
    android:paddingEnd="@dimen/_15sdp"
    android:background="@drawable/bg_dark"
    android:id="@+id/theme_bg">

    <RelativeLayout
        android:layout_marginBottom="@dimen/_5sdp"
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <androidx.nemosofts.view.ImageHelperView
            android:id="@+id/iv_app_logo"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo"
            app:hv_corner_radius="@dimen/_3sdp"/>

        <TextView
            android:id="@+id/iv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toEndOf="@+id/iv_app_logo"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:id="@+id/rl_center"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <androidx.recyclerview.widget.RecyclerView
            android:background="@drawable/bg_card_sub"
            android:backgroundTint="?ns_title"
            android:layout_centerVertical="true"
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_10sdp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_using_this_application"
            android:textColor="?ns_title_sub"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:layout_marginStart="@dimen/_3sdp"
            android:id="@+id/tv_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/terms_and_conditions"
            android:textAlignment="center"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:textColor="?ns_primary"
            android:textSize="@dimen/_10ssp"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:background="@drawable/focused_img_selector" />

    </LinearLayout>

</LinearLayout>