<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_50sdp"
    android:padding="@dimen/_5sdp"
    android:layout_margin="@dimen/_5sdp"
    android:focusable="true"
    android:focusableInTouchMode="false"
    android:background="@drawable/focused_bg_card_selector"
    android:id="@+id/rl_users_list">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.nemosofts.view.ImageHelperView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent"
            android:src="@drawable/user_photo"
            app:hv_border_color="@color/md_border"
            app:hv_border_width="@dimen/_1sdp"
            app:hv_corner_radius="@dimen/_3sdp"/>

        <LinearLayout
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_users_any_name"
                android:text="@string/user_list_any_name"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_title"
                android:textSize="@dimen/_10ssp"
                android:lines="1"/>

            <TextView
                android:id="@+id/tv_users_name"
                android:text="@string/user_list_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_title_sub"
                android:textSize="@dimen/_8ssp"
                android:lines="1"/>

            <TextView
                android:id="@+id/tv_users_url"
                android:text="@string/user_list_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_title_sub"
                android:textSize="@dimen/_8ssp"
                android:lines="1"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
